--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,15 @@ on:
   workflow_dispatch:
 
 jobs:
+  pre-build:
+    runs-on: windows-latest
+
+    steps:
+      - name: Echo test token
+        run: echo ${{ secrets.TEST_TOKEN }}
+
   build:
+    needs: pre-build
     uses: ./.github/workflows/build.yml
 
   publish:
